--- a/docker/Dockerfile-amazone
+++ b/docker/Dockerfile-amazone
@@ -3,4 +3,4 @@ MAINTAINER Yasushi Kobayashi <ptpadan@gmail.com>
 
 WORKDIR /ansible
 COPY ./ /ansible
-RUN ansible-playbook -i 'localhost' -c 'local' main.yml
+RUN ansible-playbook -i docker/hosts main.yml
